# RustAdmin

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: release.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_sessions.sql  0003_announcements.sql  0004_mobile_users.sql
backend/src/: auth.rs  config.rs  csv.rs  error.rs  main.rs  models.rs  perms.rs  state.rs
backend/src/repo/: announce.rs  audit.rs  mobile_users.rs  mod.rs  roles.rs  tokens.rs  users.rs
backend/src/routes/: announce_routes.rs  auth_routes.rs  export_routes.rs  misc_routes.rs  mobile_convert_routes.rs  mobile_routes.rs  mod.rs  role_routes.rs  user_routes.rs
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ui.tsx
frontend/src/layouts/: AdminLayout.tsx
frontend/src/pages/: Announcements.tsx  Audit.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Roles.tsx  Users.tsx
frontend/src/store/: auth.tsx
mobile/: .dockerignore  Dockerfile  nginx.conf  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/lib/app/: mobile_app.dart
mobile/lib/core/: api_client.dart  api_config.dart
mobile/lib/features/auth/: login_storage.dart  mobile_login_page.dart
mobile/lib/features/converter/: video_audio_converter_models.dart  (+4 more)
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+1 files in other folders)
